objects/EUR_CRM_Contract_Listing_Pouring__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Contract Listing/Pouring</relationshipLabel>
        <relationshipName>EUR_CRM_Contract_Listing_Pouring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Contract</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipName>EUR_CRM_Contract_Listing_Pouring</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name_Reference__c</fullName>
        <description>For system use
For the following affiliates:
1. Germany (DE)</description>
        <label>Name Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Pouring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Pouring</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Listing/Pouring (EU)</label>
    <nameField>
        <displayFormat>LP-{0000000000}</displayFormat>
        <label>Contract Listing/Pouring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Listing/Pouring (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Listing_Pouring</fullName>
        <active>true</active>
        <description>Listing/ Pouring for Germany (DE)</description>
        <label>EUR_DE_Listing_Pouring</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>